# nvidia-nemotron-reasoning-sft

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default_pattern_configs.json  model_config.json  pattern_row_targets.json  token_budget.json
data/cipher_highscore_old8k_shape/: token_budget_from_old8k.json
data/cipher_highscore_old8k_shape/tokenized_corpus_final/: meta.json
data/cipher_nomap_old8k_shape/tokenized_corpus_final/: meta.json
data/final/: token_budget_used.json
data/final/tokenized_corpus_final/: meta.json
data/final_8k/: pattern_row_targets_used.json
data/final_8k/tokenized_corpus_final/: meta.json
notebooks/: reasoning_sft_experiment.ipynb
scripts/: apply_token_budget.py  build_tokenized_corpus.py  download_tokenizer.py  inspect_token_budget.py  oversample_patterns.py  prepare_sft_dataset.py  select_dataset.py  train_lora_from_tokenized.py  verify_cipher_highscore_style.py
src/nemotron_repro/: core.py  token_budget.py  tokenizer_utils.py
src/nemotron_repro/training/: __init__.py  weighted_trainer.py
