[project]
name = "nemotron-vscode-repro"
version = "0.1.0"
description = "VSCode-ready Kaggle NVIDIA/Nemotron SFT data generation and tokenization pipeline"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "torch>=2.1.0",
  "transformers>=4.45.0",
  "datasets>=2.18.0",
  "tqdm>=4.66.0",
  "accelerate>=0.30.0",
  "peft>=0.11.0"
]

[tool.setuptools.packages.find]
where = ["src"]
